--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,23 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/png" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <a href="./index.html" class="logo-link">
+        <img
+          class="logo"
+          src="./assets/logo-white.png"
+          alt="Natours White Logo"
+        />
+      </a>
+
+      <h1 class="heading-primary">
+        <span class="heading-primary--main">Outdoors</span>
+        <span class="heading-primary--sub">is where life happens</span>
+      </h1>
+    </header>
+  </body>
 </html>
