--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,14 @@
         />
       </a>
 
-      <h1 class="heading-primary">
-        <span class="heading-primary--main">Outdoors</span>
-        <span class="heading-primary--sub">is where life happens</span>
-      </h1>
+      <main class="header__main-content">
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">Outdoors</span>
+          <span class="heading-primary--sub">is where life happens</span>
+        </h1>
+
+        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+      </main>
     </header>
   </body>
 </html>
