Implement 7-1 architecture with Sass

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="logo-link">
+      <a href="./index.html" class="header__logo">
         <img
-          class="logo"
+          class="header__logo__img"
           src="./assets/logo-white.png"
           alt="Natours White Logo"
         />
