--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,60 @@
       </main>
     </header>
 
-    <section class="grid-test">
+    <main>
+      <section class="section-about">
+        <div class="u-center-text">
+          <h2 class="heading-secondary u-margin-bottom-big">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Aspernatur maxime ad eius incidunt possimus impedit totam vero.
+              Fuga voluptas qui omnis. Dolores neque quis iure numquam ullam est
+              sit. Aut ut quisquam reiciendis nostrum molestiae sequi.
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Quia sed nulla nihil aut consequuntur architecto. Quo minus ea
+              quia rerum qui non rerum laudantium id. Est quos libero non.
+            </p>
+
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="./assets/nat-1-large.jpg"
+                alt="Photo 1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="./assets/nat-2-large.jpg"
+                alt="Photo 2"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="./assets/nat-3-large.jpg"
+                alt="Photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
         <div class="col-1-of-2">Col 1 of 2</div>
@@ -61,6 +114,6 @@
         <div class="col-1-of-4">Col 1 of 4</div>
         <div class="col-3-of-4">Col 3 of 4</div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
