--- a/natours/index.html
+++ b/natours/index.html
@@ -319,6 +319,74 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="./assets/video.mp4" type="video/mp4" />
+            <source src="./assets/video.webm" type="video/webm" />
+            Unfortunately, this browser is not supported!
+          </video>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                class="story__image"
+                src="./assets/nat-8.jpg"
+                alt="Woman rowing on a boat"
+              />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Et dolorem blanditiis. Placeat voluptate natus. Qui consequatur
+                a assumenda voluptatem rerum amet. Expedita molestiae molestiae
+                ex. Molestiae eos non excepturi non. Sed quos quas modi.
+                Voluptatem non expedita harum quas dolorem. Consequatur quis
+                quos explicabo sapiente.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                class="story__image"
+                src="./assets/nat-9.jpg"
+                alt="Woman rowing on a boat"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! My life is completely different now
+              </h3>
+              <p>
+                Voluptatum odit voluptates consequatur magni dolore aut tempora
+                non. Ipsam eligendi et sint assumenda inventore commodi minus
+                enim dolor. Consequatur quis quos explicabo sapiente omnis
+                doloribus sint hic. Placeat voluptate natus. Qui consequatur.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="grid-test">
