Fix radio button selection issue

--- a/natours/index.html
+++ b/natours/index.html
@@ -442,7 +442,7 @@
                       id="large"
                       name="size"
                     />
-                    <label for="small" class="form__radio-label">
+                    <label for="large" class="form__radio-label">
                       <span class="form__radio-button"></span>
                       Large tour group
                     </label>
