--- a/natours/index.html
+++ b/natours/index.html
@@ -14,6 +14,39 @@
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/png" />
   </head>
   <body>
+    <div class="navigation">
+      <input
+        type="checkbox"
+        class="navigation__checkbox"
+        id="navigation-toggle"
+      />
+      <label for="navigation-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__menu">
+        <ul class="navigation__menu__list">
+          <li class="navigation__menu__item">
+            <a href="#" class="navigation__menu__link"><span>01</span>About Natours</a>
+          </li>
+          <li class="navigation__menu__item">
+            <a href="#" class="navigation__menu__link"><span>02</span>Your benefits</a>
+          </li>
+          <li class="navigation__menu__item">
+            <a href="#" class="navigation__menu__link"><span>03</span>Popular tours</a>
+          </li>
+          <li class="navigation__menu__item">
+            <a href="#" class="navigation__menu__link"><span>04</span>Stories</a>
+          </li>
+          <li class="navigation__menu__item">
+            <a href="#" class="navigation__menu__link"><span>05</span>Book now</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <header class="header">
       <a href="./index.html" class="header__logo">
         <img
