--- a/natours/index.html
+++ b/natours/index.html
@@ -109,6 +109,31 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
+                srcset="./assets/nat-1.jpg 300w, ./assets/nat-1-large.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 1"
+                src="./assets/nat-1-large.jpg"
+                class="composition__photo composition__photo--p1"
+              />
+
+              <img
+                srcset="./assets/nat-2.jpg 300w, ./assets/nat-2-large.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 2"
+                src="./assets/nat-2-large.jpg"
+                class="composition__photo composition__photo--p2"
+              />
+
+              <img
+                srcset="./assets/nat-3.jpg 300w, ./assets/nat-3-large.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 3"
+                src="./assets/nat-3-large.jpg"
+                class="composition__photo composition__photo--p3"
+              />
+
+              <!--
+              <img
                 src="./assets/nat-1-large.jpg"
                 alt="Photo 1"
                 class="composition__photo composition__photo--p1"
@@ -123,6 +148,7 @@
                 alt="Photo 3"
                 class="composition__photo composition__photo--p3"
               />
+              -->
             </div>
           </div>
         </div>
