--- a/natours/index.html
+++ b/natours/index.html
@@ -543,8 +543,8 @@
               ./assets/logo-green-1x.png 1x,
               ./assets/logo-green-2x.png 2x
             "
+            src="./assets/logo-green-2x.png"
             alt="Natours Logo in green"
-            class="footer__logo"
           />
         </picture>
       </div>
