--- a/natours/index.html
+++ b/natours/index.html
@@ -110,7 +110,7 @@
             <div class="composition">
               <img
                 srcset="./assets/nat-1.jpg 300w, ./assets/nat-1-large.jpg 1000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 1"
                 src="./assets/nat-1-large.jpg"
                 class="composition__photo composition__photo--p1"
@@ -118,7 +118,7 @@
 
               <img
                 srcset="./assets/nat-2.jpg 300w, ./assets/nat-2-large.jpg 1000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 2"
                 src="./assets/nat-2-large.jpg"
                 class="composition__photo composition__photo--p2"
@@ -126,7 +126,7 @@
 
               <img
                 srcset="./assets/nat-3.jpg 300w, ./assets/nat-3-large.jpg 1000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo 3"
                 src="./assets/nat-3-large.jpg"
                 class="composition__photo composition__photo--p3"
