--- a/trillo/index.html
+++ b/trillo/index.html
@@ -12,7 +12,93 @@
     <link rel="stylesheet" href="dist/styles/styles.css?cb=1586872708002" />
   </head>
   <body>
-    <h1>Trillo</h1>
+    <div class="container">
+      <header class="header">
+        <img
+          class="header__logo"
+          src="dist/assets/logo.png"
+          alt="Trillo logo"
+        />
+
+        <form class="search-form">
+          <input
+            class="search-form__input"
+            type="search"
+            name="search-bar"
+            placeholder="Search hotels"
+          />
+          <button class="search-form__button">
+            <svg
+              class="search-form__icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <g data-name="Layer 2">
+                <g data-name="search">
+                  <rect width="24" height="24" opacity="0" />
+                  <path
+                    d="M20.71 19.29l-3.4-3.39A7.92 7.92 0 0 0 19 11a8 8 0 1 0-8 8 7.92 7.92 0 0 0 4.9-1.69l3.39 3.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 11a6 6 0 1 1 6 6 6 6 0 0 1-6-6z"
+                  />
+                </g>
+              </g>
+            </svg>
+          </button>
+        </form>
+
+        <nav class="header__user-nav">
+          <ul class="user-nav">
+            <li class="user-nav__item">
+              <svg
+                class="user-nav__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <g data-name="Layer 2">
+                  <g data-name="bell">
+                    <rect width="24" height="24" opacity="0" />
+                    <path
+                      d="M20.52 15.21l-1.8-1.81V8.94a6.86 6.86 0 0 0-5.82-6.88 6.74 6.74 0 0 0-7.62 6.67v4.67l-1.8 1.81A1.64 1.64 0 0 0 4.64 18H8v.34A3.84 3.84 0 0 0 12 22a3.84 3.84 0 0 0 4-3.66V18h3.36a1.64 1.64 0 0 0 1.16-2.79zM14 18.34A1.88 1.88 0 0 1 12 20a1.88 1.88 0 0 1-2-1.66V18h4z"
+                    />
+                  </g>
+                </g>
+              </svg>
+
+              <span class="user-nav__stats">7</span>
+            </li>
+
+            <li class="user-nav__item">
+              <svg
+                class="user-nav__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <g data-name="Layer 2">
+                  <g data-name="message-square">
+                    <rect width="24" height="24" opacity="0" />
+                    <path
+                      d="M19 3H5a3 3 0 0 0-3 3v15a1 1 0 0 0 .51.87A1 1 0 0 0 3 22a1 1 0 0 0 .51-.14L8 19.14a1 1 0 0 1 .55-.14H19a3 3 0 0 0 3-3V6a3 3 0 0 0-3-3zM8 12a1 1 0 1 1 1-1 1 1 0 0 1-1 1zm4 0a1 1 0 1 1 1-1 1 1 0 0 1-1 1zm4 0a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"
+                    />
+                  </g>
+                </g>
+              </svg>
+
+              <span class="user-nav__stats">5</span>
+            </li>
+
+            <li class="user-nav__item user-nav__profile">
+              <img src="dist/assets/avatar.jpg" alt="User avatar" />
+              <span>Hermione</span>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <div class="content">
+        <nav class="sidebar">Sidebar</nav>
+
+        <main class="hotel-view">Hotel view</main>
+      </div>
+    </div>
 
     <script src="dist/all.js?cb=1586872708002"></script>
   </body>
