--- a/trillo/index.html
+++ b/trillo/index.html
@@ -94,7 +94,88 @@
       </header>
 
       <div class="content">
-        <nav class="sidebar">Sidebar</nav>
+        <nav class="sidebar">
+          <ul class="sidebar__menu">
+            <li class="sidebar__menu__item sidebar__menu__item--active">
+              <svg
+                class="sidebar__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <g data-name="Layer 2">
+                  <g data-name="film">
+                    <rect width="24" height="24" opacity="0" />
+                    <path
+                      d="M18.26 3H5.74A2.74 2.74 0 0 0 3 5.74v12.52A2.74 2.74 0 0 0 5.74 21h12.52A2.74 2.74 0 0 0 21 18.26V5.74A2.74 2.74 0 0 0 18.26 3zM7 11H5V9h2zm-2 2h2v2H5zm14-2h-2V9h2zm-2 2h2v2h-2zm2-7.26V7h-2V5h1.26a.74.74 0 0 1 .74.74zM5.74 5H7v2H5V5.74A.74.74 0 0 1 5.74 5zM5 18.26V17h2v2H5.74a.74.74 0 0 1-.74-.74zm14 0a.74.74 0 0 1-.74.74H17v-2h2z"
+                    />
+                  </g>
+                </g>
+              </svg>
+              <span>Movies</span>
+            </li>
+
+            <li class="sidebar__menu__item">
+              <svg
+                class="sidebar__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <g data-name="Layer 2">
+                  <g data-name="tv">
+                    <rect width="24" height="24" opacity="0" />
+                    <path
+                      d="M18 6h-3.59l2.3-2.29a1 1 0 1 0-1.42-1.42L12 5.59l-3.29-3.3a1 1 0 1 0-1.42 1.42L9.59 6H6a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3V9a3 3 0 0 0-3-3zm1 13a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1v-7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1z"
+                    />
+                  </g>
+                </g>
+              </svg>
+              <span>TV Series</span>
+            </li>
+
+            <li class="sidebar__menu__item">
+              <svg
+                class="sidebar__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <g data-name="Layer 2">
+                  <g data-name="headphones">
+                    <rect width="24" height="24" opacity="0" />
+                    <path
+                      d="M12 2A10.2 10.2 0 0 0 2 12.37V17a4 4 0 1 0 4-4 3.91 3.91 0 0 0-2 .56v-1.19A8.2 8.2 0 0 1 12 4a8.2 8.2 0 0 1 8 8.37v1.19a3.91 3.91 0 0 0-2-.56 4 4 0 1 0 4 4v-4.63A10.2 10.2 0 0 0 12 2z"
+                    />
+                  </g>
+                </g>
+              </svg>
+              <span>Music</span>
+            </li>
+
+            <li class="sidebar__menu__item">
+              <svg
+                class="sidebar__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <g data-name="Layer 2">
+                  <g data-name="mic">
+                    <rect width="24" height="24" opacity="0" />
+                    <path
+                      d="M12 15a4 4 0 0 0 4-4V6a4 4 0 0 0-8 0v5a4 4 0 0 0 4 4z"
+                    />
+                    <path
+                      d="M19 11a1 1 0 0 0-2 0 5 5 0 0 1-10 0 1 1 0 0 0-2 0 7 7 0 0 0 6 6.92V20H8.89a.89.89 0 0 0-.89.89v.22a.89.89 0 0 0 .89.89h6.22a.89.89 0 0 0 .89-.89v-.22a.89.89 0 0 0-.89-.89H13v-2.08A7 7 0 0 0 19 11z"
+                    />
+                  </g>
+                </g>
+              </svg>
+              <span>Podcasts</span>
+            </li>
+          </ul>
+
+          <p class="sidebar__legal">
+            &copy; 2020 &ndash; trillo. All rights reserved.
+          </p>
+        </nav>
 
         <main class="hotel-view">Hotel view</main>
       </div>
