--- a/trillo/index.html
+++ b/trillo/index.html
@@ -177,7 +177,62 @@
           </p>
         </nav>
 
-        <main class="hotel-view">Hotel view</main>
+        <main class="movie">
+          <header class="movie__header">
+            <div class="movie__header__info movie-info">
+              <h1 class="movie-info__title heading-1">
+                <span class="movie-info__title--title">Parasite</span>
+                <span class="movie-info__title--year">
+                  (<a href="#">2019</a>)
+                </span>
+              </h1>
+
+              <p class="movie-info__original-title">
+                Gisaengchung (original title)
+              </p>
+
+              <ul class="movie-info__misc-details">
+                <li class="movie-info__detail">R</li>
+                <li class="movie-info__detail">2h 12min</li>
+                <li class="movie-info__detail">
+                  <a href="#">Comedy</a>, <a href="#">Drama</a>,
+                  <a href="#">Thriller</a>
+                </li>
+                <li class="movie-info__detail">8 November 2019 (USA)</li>
+              </ul>
+            </div>
+
+            <div class="movie__header__rating">
+              <div class="movie__header__rating__top">
+                <svg
+                  class="movie__header__rating__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <g data-name="Layer 2">
+                    <g data-name="star">
+                      <rect
+                        width="24"
+                        height="24"
+                        transform="rotate(90 12 12)"
+                        opacity="0"
+                      />
+                      <path
+                        d="M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z"
+                      />
+                    </g>
+                  </g>
+                </svg>
+
+                <p class="movie__header__rating__score">
+                  <span class="movie__header__rating__score--own">7.9</span>
+                  <span class="movie__header__rating__score--top">/ 10</span>
+                </p>
+              </div>
+              <span class="movie__header__rating__votes">364,382</span>
+            </div>
+          </header>
+        </main>
       </div>
     </div>
 
