--- a/trillo/index.html
+++ b/trillo/index.html
@@ -232,6 +232,144 @@
               <span class="movie__header__rating__votes">364,382</span>
             </div>
           </header>
+
+          <div class="movie-gallery">
+            <figure class="movie-gallery__item">
+              <img
+                src="dist/assets/parasite-poster.jpg"
+                class="movie-gallery__image"
+                alt="Parasite poster"
+              />
+            </figure>
+
+            <figure class="movie-gallery__item">
+              <img
+                src="dist/assets/parasite-scene-1.jpg"
+                class="movie-gallery__image"
+                alt="Parasite scene"
+              />
+            </figure>
+
+            <figure class="movie-gallery__item">
+              <img
+                src="dist/assets/parasite-scene-2.jpg"
+                class="movie-gallery__image"
+                alt="Parasite scene"
+              />
+            </figure>
+          </div>
+
+          <div class="movie-meta">
+            <div class="movie-credits">
+              <p class="movie-meta__plot">
+                A poor family, the Kims, con their way into becoming the
+                servants of a rich family, the Parks. But their easy life gets
+                complicated when their deception is threatened with exposure.
+              </p>
+
+              <ul class="movie-credits-list">
+                <li class="movie-credit">
+                  <strong>Director:</strong> <a href="#">Bong Joon Ho</a>
+                </li>
+                <li class="movie-credit">
+                  <strong>Writers:</strong> <a href="#">Bong Joon Ho</a> (story,
+                  screenplay), <a href="#">Jin Won Han</a> (screenplay)
+                </li>
+                <li class="movie-credit">
+                  <strong>Stars:</strong> <a href="#">Kang-ho Song</a>,
+                  <a href="#">Sun-kyun Lee</a>, <a href="#">Yeo-jeong Jo</a>
+                </li>
+              </ul>
+
+              <button class="cta">
+                <span class="cta__text">Watch</span>
+                <svg
+                  class="cta__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <g data-name="Layer 2">
+                    <g data-name="arrow-forward">
+                      <rect
+                        width="24"
+                        height="24"
+                        transform="rotate(-90 12 12)"
+                        opacity="0"
+                      />
+                      <path
+                        d="M5 13h11.86l-3.63 4.36a1 1 0 0 0 1.54 1.28l5-6a1.19 1.19 0 0 0 .09-.15c0-.05.05-.08.07-.13A1 1 0 0 0 20 12a1 1 0 0 0-.07-.36c0-.05-.05-.08-.07-.13a1.19 1.19 0 0 0-.09-.15l-5-6A1 1 0 0 0 14 5a1 1 0 0 0-.64.23 1 1 0 0 0-.13 1.41L16.86 11H5a1 1 0 0 0 0 2z"
+                      />
+                    </g>
+                  </g>
+                </svg>
+              </button>
+            </div>
+
+            <ul class="movie-critics">
+              <li class="movie-critic movie-critic--metascore">
+                <p class="metascore-score">96</p>
+                <p class="metascore-info">
+                  <span class="metascore-info__title">Metascore</span>
+                  <span class="metascore-info__desc"
+                    >From <a href="#">metacritic.com</a></span
+                  >
+                </p>
+              </li>
+
+              <li class="movie-critic movie-critic--reviews reviews">
+                <svg
+                  class="reviews__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <g data-name="Layer 2">
+                    <g data-name="activity">
+                      <rect
+                        width="24"
+                        height="24"
+                        transform="rotate(90 12 12)"
+                        opacity="0"
+                      />
+                      <path
+                        d="M14.33 20h-.21a2 2 0 0 1-1.76-1.58L9.68 6l-2.76 6.4A1 1 0 0 1 6 13H3a1 1 0 0 1 0-2h2.34l2.51-5.79a2 2 0 0 1 3.79.38L14.32 18l2.76-6.38A1 1 0 0 1 18 11h3a1 1 0 0 1 0 2h-2.34l-2.51 5.79A2 2 0 0 1 14.33 20z"
+                      />
+                    </g>
+                  </g>
+                </svg>
+
+                <div class="reviews__info">
+                  <span class="reviews__info__title">Reviews</span>
+                  <span class="reviews__info__desc">2,126 users</span>
+                </div>
+              </li>
+
+              <li class="movie-critic movie-critic--popularity popularity">
+                <svg
+                  class="popularity__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <g data-name="Layer 2">
+                    <g data-name="trending-up">
+                      <rect
+                        width="24"
+                        height="24"
+                        transform="rotate(-90 12 12)"
+                        opacity="0"
+                      />
+                      <path
+                        d="M21 7a.78.78 0 0 0 0-.21.64.64 0 0 0-.05-.17 1.1 1.1 0 0 0-.09-.14.75.75 0 0 0-.14-.17l-.12-.07a.69.69 0 0 0-.19-.1h-.2A.7.7 0 0 0 20 6h-5a1 1 0 0 0 0 2h2.83l-4 4.71-4.32-2.57a1 1 0 0 0-1.28.22l-5 6a1 1 0 0 0 .13 1.41A1 1 0 0 0 4 18a1 1 0 0 0 .77-.36l4.45-5.34 4.27 2.56a1 1 0 0 0 1.27-.21L19 9.7V12a1 1 0 0 0 2 0V7z"
+                      />
+                    </g>
+                  </g>
+                </svg>
+                <div class="popularity__info">
+                  <span class="popularity__info__title">Popularity</span>
+                  <span class="popularity__info__desc">8 (Up)</span>
+                </div>
+              </li>
+            </ul>
+          </div>
         </main>
       </div>
     </div>
