Minor vertical spacing improvements

--- a/trillo/index.html
+++ b/trillo/index.html
@@ -188,7 +188,7 @@
               </h1>
 
               <p class="movie-info__original-title">
-                Gisaengchung (original title)
+                Gisaengchung <span>(Original title)</span>
               </p>
 
               <ul class="movie-info__misc-details">
