Add Tech specs and Box office sections

--- a/trillo/index.html
+++ b/trillo/index.html
@@ -6,10 +6,10 @@
     <link rel="shortcut icon" href="dist/assets/favicon.png" type="image/png" />
     <title>Trillo | Flexbox Project</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/styles/styles.css?cb=1586991173135" />
+    <link rel="stylesheet" href="dist/styles/styles.css?cb=1587003448858" />
   </head>
   <body>
     <div class="container">
@@ -279,9 +279,16 @@
                   <strong>Stars:</strong> <a href="#">Kang-ho Song</a>,
                   <a href="#">Sun-kyun Lee</a>, <a href="#">Yeo-jeong Jo</a>
                 </li>
+                <li class="movie-credit">
+                  <strong>Country:</strong> <a href="#">South Korea</a>
+                </li>
+                <li class="movie-credit">
+                  <strong>Language:</strong> <a href="#">Korean</a>,
+                  <a href="#">English</a>
+                </li>
               </ul>
 
-              <button class="cta">
+              <!-- <button class="cta">
                 <span class="cta__text">Watch</span>
                 <svg
                   class="cta__icon"
@@ -302,7 +309,7 @@
                     </g>
                   </g>
                 </svg>
-              </button>
+              </button> -->
             </div>
 
             <ul class="movie-critics">
@@ -370,10 +377,61 @@
               </li>
             </ul>
           </div>
+
+          <section class="tech-specs">
+            <h2 class="tech-specs__title heading-2">Technical Specs</h2>
+            <ul class="alt-list">
+              <li class="alt-list__item">
+                <span>Runtime:</span> 2 hr 12 min (132 min)
+              </li>
+              <li class="alt-list__item">
+                <span>Sound Mix:</span> <a href="#">Dolby Atmos</a>,
+                <a href="#">Dolby Digital</a>
+              </li>
+              <li class="alt-list__item">
+                <span>Color</span>: <a href="#">Color</a>
+              </li>
+              <li class="alt-list__item">
+                <span>Aspect Ratio:</span> 2.39 : 1
+              </li>
+              <li class="alt-list__item">
+                <span>Camera:</span> Arri Alexa 65, Hasselblad Prime DNA Lenses
+              </li>
+              <li class="alt-list__item">
+                <span>Negative Format:</span> Codex
+              </li>
+              <li class="alt-list__item">
+                <span>Cinematographic Process:</span> ARRIRAW (6.5K) (source
+                format), Digital Intermediate (4K) (master format)
+              </li>
+              <li class="alt-list__item">
+                <span>Printed Film Format:</span> D-Cinema
+              </li>
+            </ul>
+          </section>
+
+          <section class="box-office">
+            <h2 class="box-office__title heading-2">Box Office</h2>
+            <ul class="alt-list">
+              <li class="alt-list__item">
+                <span>Budget:</span> $11,400,000 (estimated)
+              </li>
+              <li class="alt-list__item">
+                <span>Opening Weekend USA:</span> $393,216, 13 October 2019
+              </li>
+              <li class="alt-list__item">
+                <span>Gross USA:</span> $53,369,749
+              </li>
+              <li class="alt-list__item">
+                <span>Cumulative Worldwide Gross:</span> $254,207,199
+              </li>
+              <a href="#" class="cta-inline">See more on trilloPro</a>
+            </ul>
+          </section>
         </main>
       </div>
     </div>
 
-    <script src="dist/all.js?cb=1586991173135"></script>
+    <script src="dist/all.js?cb=1587003448858"></script>
   </body>
 </html>
