Add Watch section

--- a/trillo/index.html
+++ b/trillo/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/styles/styles.css?cb=1587003448858" />
+    <link rel="stylesheet" href="dist/styles/styles.css?cb=1587055623955" />
   </head>
   <body>
     <div class="container">
@@ -287,29 +287,6 @@
                   <a href="#">English</a>
                 </li>
               </ul>
-
-              <!-- <button class="cta">
-                <span class="cta__text">Watch</span>
-                <svg
-                  class="cta__icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                >
-                  <g data-name="Layer 2">
-                    <g data-name="arrow-forward">
-                      <rect
-                        width="24"
-                        height="24"
-                        transform="rotate(-90 12 12)"
-                        opacity="0"
-                      />
-                      <path
-                        d="M5 13h11.86l-3.63 4.36a1 1 0 0 0 1.54 1.28l5-6a1.19 1.19 0 0 0 .09-.15c0-.05.05-.08.07-.13A1 1 0 0 0 20 12a1 1 0 0 0-.07-.36c0-.05-.05-.08-.07-.13a1.19 1.19 0 0 0-.09-.15l-5-6A1 1 0 0 0 14 5a1 1 0 0 0-.64.23 1 1 0 0 0-.13 1.41L16.86 11H5a1 1 0 0 0 0 2z"
-                      />
-                    </g>
-                  </g>
-                </svg>
-              </button> -->
             </div>
 
             <ul class="movie-critics">
@@ -428,10 +405,21 @@
               <a href="#" class="cta-inline">See more on trilloPro</a>
             </ul>
           </section>
+
+          <section class="watch">
+            <h3 class="watch__title heading-3">
+              Good news! This title is available to watch.
+            </h3>
+
+            <button class="cta">
+              <span class="cta__text-visible">Watch</span>
+              <span class="cta__text-invisible">And Enjoy</span>
+            </button>
+          </section>
         </main>
       </div>
     </div>
 
-    <script src="dist/all.js?cb=1587003448858"></script>
+    <script src="dist/all.js?cb=1587055623955"></script>
   </body>
 </html>
