Fix search form input's placeholder

--- a/trillo/index.html
+++ b/trillo/index.html
@@ -25,7 +25,7 @@
             class="search-form__input"
             type="search"
             name="search-bar"
-            placeholder="Search hotels"
+            placeholder="Search movies"
           />
           <button class="search-form__button">
             <svg
