--- a/nexter/index.html
+++ b/nexter/index.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="dist/assets/favicon.png" type="image/png" />
-    <title>Nexter | Project for CSS Grid</title>
+    <title>nexter | your home, your freedom</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Expletus+Sans:ital,wght@1,500;1,700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="dist/styles/styles.css?cb=1587507540113" />
   </head>
-  <body>
-    <h1>Nexter</h1>
+  <body class="container">
+    <div class="sidebar">Sidebar</div>
+
+    <header class="header">Header</header>
+
+    <div class="realtors">Top 3 realtors</div>
+
+    <section class="features">Features</section>
+
+    <div class="story__pictures">Story pictures</div>
+
+    <div class="story__content">Story content</div>
+
+    <section class="homes">Homes</section>
+
+    <section class="gallery">Gallery</section>
+
+    <footer class="footer">Footer</footer>
 
     <script src="dist/all.js?cb=1587507540113"></script>
   </body>
