--- a/nexter/index.html
+++ b/nexter/index.html
@@ -18,7 +18,156 @@
 
     <div class="realtors">Top 3 realtors</div>
 
-    <section class="features">Features</section>
+    <section class="features">
+      <div class="feature">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="1"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feature__icon"
+        >
+          <circle cx="12" cy="12" r="10"></circle>
+          <line x1="2" y1="12" x2="22" y2="12"></line>
+          <path
+            d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"
+          ></path>
+        </svg>
+
+        <h4 class="heading-4 feature__title">World's best luxury homes</h4>
+        <p class="feature__desc">
+          Consequatur in officiis ab eum est. Tenetur blanditiis sapiente non
+          aliquid ab voluptate laboriosam reiciendis est.
+        </p>
+      </div>
+
+      <div class="feature">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="1"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feature__icon"
+        >
+          <polygon
+            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
+          ></polygon>
+        </svg>
+
+        <h4 class="heading-4 feature__title">Only the best properties</h4>
+        <p class="feature__desc">
+          Ex ratione id at. Deserunt consequa suscipit autem voluptas.
+          Laboriosam fugiat perspiciatis. Quisquam nihil.
+        </p>
+      </div>
+
+      <div class="feature">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="1"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feature__icon"
+        >
+          <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+          <circle cx="12" cy="10" r="3"></circle>
+        </svg>
+
+        <h4 class="heading-4 feature__title">All homes in top locations</h4>
+        <p class="feature__desc">
+          Voluptatum repellendus nihil. Saepe accusamus consequuntur porro et
+          delectus quis quia.
+        </p>
+      </div>
+
+      <div class="feature">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="1"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feature__icon"
+        >
+          <path
+            d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"
+          ></path>
+        </svg>
+
+        <h4 class="heading-4 feature__title">New home in one week</h4>
+        <p class="feature__desc">
+          Nihil sed est porro ut deserunt aut. Et consequatur nihil cum
+          delectus. Quo non possimus debitis est. Repudiandae et vitae.
+        </p>
+      </div>
+
+      <div class="feature">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="1"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feature__icon"
+        >
+          <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
+          <polyline points="17 6 23 6 23 12"></polyline>
+        </svg>
+
+        <h4 class="heading-4 feature__title">Top 1% realtors</h4>
+        <p class="feature__desc">
+          Ipsum nemo impedit et architecto. In accusantium tempore et sit
+          officia. Ut perferendis nihil assumenda occaecati
+        </p>
+      </div>
+
+      <div class="feature">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="1"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feature__icon"
+        >
+          <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+          <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+        </svg>
+
+        <h4 class="heading-4 feature__title">Secure payments on nexter</h4>
+        <p class="feature__desc">
+          Suscipit dolorum voluptates sint voluptatum. Impedit quam officia
+          repellendus. Tempore numquam non illum eos.
+        </p>
+      </div>
+    </section>
 
     <div class="story__pictures">Story pictures</div>
 
