Build the Story section

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Expletus+Sans:ital,wght@1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/styles/styles.css?cb=1587507540113" />
+    <link rel="stylesheet" href="dist/styles/styles.css?cb=1587558694550" />
   </head>
   <body class="container">
     <div class="sidebar">Sidebar</div>
@@ -169,9 +169,32 @@
       </div>
     </section>
 
-    <div class="story__pictures">Story pictures</div>
+    <div class="story__pictures">
+      <img
+        src="dist/assets/story-1.jpeg"
+        alt="Couple sitting on the floor staring at the sunset"
+        class="story__img--1"
+      />
+      <img
+        src="dist/assets/story-2.jpeg"
+        alt="New house"
+        class="story__img--2"
+      />
+    </div>
 
-    <div class="story__content">Story content</div>
+    <div class="story__content">
+      <h3 class="heading-3 story__label">Happy customers</h3>
+      <h2 class="heading-2 story__title">
+        &ldquo;The best decision of our lives&rdquo;
+      </h2>
+      <p class="story__desc">
+        Similique quia reiciendis. Praesentium laboriosam velit consectetur
+        consequatur vel commodi consequatur. Quas nostrum accusamus ratione
+        atque dolore maiores provident. Aut quia in neque earum voluptates
+        dolore cum.
+      </p>
+      <button class="btn">Find your own home</button>
+    </div>
 
     <section class="homes">Homes</section>
 
@@ -179,6 +202,6 @@
 
     <footer class="footer">Footer</footer>
 
-    <script src="dist/all.js?cb=1587507540113"></script>
+    <script src="dist/all.js?cb=1587558694550"></script>
   </body>
 </html>
