Build the Footer

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -972,7 +972,35 @@
       </figure>
     </section>
 
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+      <ul class="footer-nav" role="navigation">
+        <li class="footer-nav__item">
+          <a href="#" class="footer-nav__item__link">Find your dream home</a>
+        </li>
+        <li class="footer-nav__item">
+          <a href="#" class="footer-nav__item__link">Request proposal</a>
+        </li>
+        <li class="footer-nav__item">
+          <a href="#" class="footer-nav__item__link">Download home planner</a>
+        </li>
+        <li class="footer-nav__item">
+          <a href="#" class="footer-nav__item__link">Contact us</a>
+        </li>
+        <li class="footer-nav__item">
+          <a href="#" class="footer-nav__item__link">Submit your property</a>
+        </li>
+        <li class="footer-nav__item">
+          <a href="#" class="footer-nav__item__link">Come work with us</a>
+        </li>
+      </ul>
+
+      <p class="footer__copyright">
+        &copy; nexter 2020. Veritatis id officia aut inventore explicabo labore
+        numquam. Et ex reprehenderit amet aspernatur repudiandae aut. Aut et
+        cupiditate suscipit. Et sequi nihil libero aut qui inventore nihil
+        voluptate dolores.
+      </p>
+    </footer>
 
     <script src="dist/all.js?cb=1587558694550"></script>
   </body>
