--- a/nexter/index.html
+++ b/nexter/index.html
@@ -12,7 +12,24 @@
     <link rel="stylesheet" href="dist/styles/styles.css?cb=1587558694550" />
   </head>
   <body class="container">
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="sidebar__icon"
+      >
+        <line x1="3" y1="12" x2="21" y2="12"></line>
+        <line x1="3" y1="6" x2="21" y2="6"></line>
+        <line x1="3" y1="18" x2="21" y2="18"></line>
+      </svg>
+    </div>
 
     <header class="header">Header</header>
 
