Build the Header

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Expletus+Sans:ital,wght@1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/styles/styles.css?cb=1587558694550" />
+    <link rel="stylesheet" href="dist/styles/styles.css?cb=1587645298039" />
   </head>
   <body class="container">
     <div class="sidebar">
@@ -31,7 +31,35 @@
       </svg>
     </div>
 
-    <header class="header">Header</header>
+    <header class="header">
+      <img src="dist/assets/logo.png" alt="Nexter logo" class="header__logo" />
+      <h3 class="heading-3 header__subtitle">Your own home</h3>
+      <h1 class="heading-1 header__title">The ultimate personal freedom</h1>
+      <button class="btn">View our properties</button>
+      <div class="header__visibility-text">As seen on</div>
+      <div class="header__visibility-logos">
+        <img
+          src="dist/assets/logo-bbc.png"
+          alt="Logo of BBC"
+          class="header__visibility-logo"
+        />
+        <img
+          src="dist/assets/logo-forbes.png"
+          alt="Logo of Forbes"
+          class="header__visibility-logo"
+        />
+        <img
+          src="dist/assets/logo-techcrunch.png"
+          alt="Logo of TechCrunch"
+          class="header__visibility-logo"
+        />
+        <img
+          src="dist/assets/logo-bi.png"
+          alt="Logo of BI"
+          class="header__visibility-logo"
+        />
+      </div>
+    </header>
 
     <div class="realtors">Top 3 realtors</div>
 
@@ -1019,6 +1047,6 @@
       </p>
     </footer>
 
-    <script src="dist/all.js?cb=1587558694550"></script>
+    <script src="dist/all.js?cb=1587645298039"></script>
   </body>
 </html>
