--- a/nexter/index.html
+++ b/nexter/index.html
@@ -61,7 +61,43 @@
       </div>
     </header>
 
-    <div class="realtors">Top 3 realtors</div>
+    <div class="realtors">
+      <h3 class="heading-3">Top 3 Realtors</h3>
+      <div class="realtors__list">
+        <!-- Realtor #1 -->
+        <img
+          src="dist/assets/realtor-1.jpg"
+          alt="Realtor 1"
+          class="realtors__img"
+        />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Leah Taylor</h4>
+          <p class="realtors__sold">245 houses sold</p>
+        </div>
+
+        <!-- Realtor #2 -->
+        <img
+          src="dist/assets/realtor-2.jpg"
+          alt="Realtor 2"
+          class="realtors__img"
+        />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Ren&eacute; Castro</h4>
+          <p class="realtors__sold">212 houses sold</p>
+        </div>
+
+        <!-- Realtor #3 -->
+        <img
+          src="dist/assets/realtor-3.jpg"
+          alt="Realtor 3"
+          class="realtors__img"
+        />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Vincent Wallace</h4>
+          <p class="realtors__sold">209 houses sold</p>
+        </div>
+      </div>
+    </div>
 
     <section class="features">
       <div class="feature">
